--- a/resume/index.html
+++ b/resume/index.html
@@ -1,1 +1,45 @@
+<html>
 
+<h1>Hello, there!</h1>
+<p>My name is Taylor Smith and I am currently pursing my AA degree at Seminole State. I am currently studying digital media, however, my end goal is to get an AS degree in interior design. I do not have very much experience with web design, but I have designed a few logos using Adobe Photoshop, Illustrator, and InDesign.
+<br> Eventually, I would love to own my own interior design firm, but for now I am an intern with an interior designer in Sanford.</br>I work several jobs, but in my free time I love to draw, drink coffee, and go out on the lake!</p>
+
+<h2>Skills</h2>
+<ul>
+<li>Interior Design</li>
+<li>Graphic Design</li>
+<li>Web Design</li>
+<li>Drawing</li>
+<li>Organization</li>
+<li>Sculpting</li>
+<li>HTML</li>
+<li>Photography</li>
+<li>Photo Editing</li>
+<li>Writing</li>
+</ul>
+
+
+<h2>Software/Hardware</h2>
+<ul>
+<li>Adobe Photoshop</li>
+<li>Adobe InDesign</li>
+<li>Adobe Illustrator</li>
+<li>Adobe Lightroom</li>
+<li>Microsoft Office</li>
+<li>Canva</li>
+</ul>
+
+<h2>Social Media</h2>
+<ul>
+<li><a href="https://www.instagram.com/itstaylormichellee/">Instagram</a></li>
+<li><a href="https://github.com/taylormichelle3">Github</a></li>
+</ul>
+
+<h2>Work Samples</h2>
+<img src="samples/CleanCoLogo.jpg" alt="Clean Co." width="300" height="150">
+<img src="samples/DrivenAutoDetailingLogo.jpg" alt="Driven Auto Detailing" width="325" height="250">
+<img src="samples/ColsonsCrittersLogo.jpg" alt="Colson's Critters" width="300" height="300">
+<img src="samples/ElephantDrawing.jpg" alt="Elephant Drawing" width="250" height="300">
+<img src="samples/BeeDrawing.jpg" alt="Bee Drawing" width="300" height="250">
+
+</html>
