--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,5 @@
 <html>
+<body>
 
 <h1>Hello, there!</h1>
 <p>My name is Taylor Smith and I am currently pursing my AA degree at Seminole State. I am currently studying digital media, however, my end goal is to get an AS degree in interior design. I do not have very much experience with web design, but I have designed a few logos using Adobe Photoshop, Illustrator, and InDesign.
@@ -36,10 +37,12 @@
 </ul>
 
 <h2>Work Samples</h2>
-<img src="samples/CleanCoLogo.jpg" alt="Clean Co." width="300" height="150">
-<img src="samples/DrivenAutoDetailingLogo.jpg" alt="Driven Auto Detailing" width="325" height="250">
-<img src="samples/ColsonsCrittersLogo.jpg" alt="Colson's Critters" width="300" height="300">
-<img src="samples/ElephantDrawing.jpg" alt="Elephant Drawing" width="250" height="300">
-<img src="samples/BeeDrawing.jpg" alt="Bee Drawing" width="300" height="250">
+<a href="keepmovingforward.jpg"><img src="thumbnails/keepmovingforward.jpg" alt="Keep Moving Forward" width="250" height="250"></a>
+<a href="interiordesignapartment.png"><img src="thumbnails/interiordesignapartment.png" alt="Apartment Design" width="250" height="250"></a>
+<a href="okbutfirstcoffee.png"><img src="thumbnails/okbutfirstcoffee.png" alt="Ok, But First Coffee" width="250" height="250"></a>
+<a href="bathroomdesign.jpg"><img src="thumbnails/bathroomdesign.jpg" alt="Bathroom Design" width="250" height="250"></a>
+<a href="zucuchomontes.jpg"><img src="thumbnails/zucuchomontes.jpg" alt="Zucucho Montes" width="250" height="250"></a>
+<a href="color palette.jpg"><img src="thumbnails/colorpalette.jpg" alt="Color Palette" width="250" height="250"></a>
 
+</body>
 </html>
