--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,7 @@
 <a href="okbutfirstcoffee.png"><img src="thumbnails/okbutfirstcoffee.png" alt="Ok, But First Coffee" width="250" height="250"></a>
 <a href="bathroomdesign.jpg"><img src="thumbnails/bathroomdesign.jpg" alt="Bathroom Design" width="250" height="250"></a>
 <a href="zucuchomontes.jpg"><img src="thumbnails/zucuchomontes.jpg" alt="Zucucho Montes" width="250" height="250"></a>
-<a href="colorpalette.jpg"><img src="thumbnails/colorpalette.jpg" alt="Color Palette" width="250" height="250"></a>
+<a href="ColorPalette.jpg"><img src="thumbnails/ColorPalette.jpg" alt="Color Palette" width="250" height="250"></a>
 
 </body>
 </html>
