--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,10 @@
 <html>
-<body>
+<head>
+<meta charset="utf-8">
+<title>index.html</title>
+</head>
 
+<body>
 <h1>Hello, there!</h1>
 <p>My name is Taylor Smith and I am currently pursing my AA degree at Seminole State. I am currently studying digital media, however, my end goal is to get an AS degree in interior design. I do not have very much experience with web design, but I have designed a few logos using Adobe Photoshop, Illustrator, and InDesign.
 <br> Eventually, I would love to own my own interior design firm, but for now I am an intern with an interior designer in Sanford.</br>I work several jobs, but in my free time I love to draw, drink coffee, and go out on the lake!</p>
@@ -42,7 +46,7 @@
 <a href="okbutfirstcoffee.png"><img src="thumbnails/okbutfirstcoffee.png" alt="Ok, But First Coffee" width="250" height="250"></a>
 <a href="bathroomdesign.jpg"><img src="thumbnails/bathroomdesign.jpg" alt="Bathroom Design" width="250" height="250"></a>
 <a href="zucuchomontes.jpg"><img src="thumbnails/zucuchomontes.jpg" alt="Zucucho Montes" width="250" height="250"></a>
-<a href="colorpalette.jpeg"><img src="thumbnails/colorpalette.jpeg" alt="Color Palette" width="250" height="250"></a>
+<a href="color palette.jpg"><img src="thumbnails/colorpalette.jpg" alt="Color Palette" width="250" height="250"></a>
 
 </body>
 </html>
