--- a/blackgoose/blackgoose.html
+++ b/blackgoose/blackgoose.html
@@ -6,6 +6,7 @@ href="blackgoose.html">Home</a> &nbsp;
 <a href="index.html">Recipes</a> &nbsp;
 <a href="bgnews.html">News</a> &nbsp;
 <a href="about.html">About</a> &nbsp;
+<a href="gallery.html">Gallery</a> &nbsp;
 <a href="glossary.html"target=”_blank”>Glossary</a> &nbsp;
 </center>
 
@@ -47,10 +48,13 @@ Ul {
 <h1>Black Goose Bistro</h1>
 </center>
 
+<center>
 <h2>The Restaurant</h2>
 <p>The Black Goose Bistro offers causal lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients.</p>
 <h2>Catering Services</h2>
 <p>You have fun... <em>we'll handle the cooking!</em> Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
+<br>
+<center><a href="pizza.gif"><img src="pizza.gif" alt="order pizza button" width="200 px" height="200 px"></a>
 <br>
 <h2>Location | Hours of Operation | Contact</h2>
 
@@ -59,5 +63,6 @@ Ul {
 <dt>Monday through Thursday 11am to 9pm</dt>
 <dt>Friday and Saturday, 11am to midnight</dt>
 </ul>
+<center>
 </body>
 </html>
