--- a/blackgoose/blackgoose.html
+++ b/blackgoose/blackgoose.html
@@ -54,7 +54,7 @@ Ul {
 <h2>Catering Services</h2>
 <p>You have fun... <em>we'll handle the cooking!</em> Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
 <br>
-<center><a href="pizza.gif"><img src="pizza.gif" alt="order pizza button" width="200 px" height="200 px"></a>
+<center><a href="https://taylormichelle3.github.io/fid/blackgoose/pizza.html"><img src="pizza.gif" alt="order pizza button" width="200 px" height="200 px"></a>
 <br>
 <h2>Location | Hours of Operation | Contact</h2>
 
