--- a/blackgoose/bgnews.html
+++ b/blackgoose/bgnews.html
@@ -73,5 +73,6 @@ Tuesday to Saturday, 11am to 11pm</p>
 
 <br>
 <Small>All content copyright 2017&#169;, Black Goose Bistro and Jennifer Robbins
+<a href="https://taylormichelle3.github.io/fid/blackgoose/cooking.html">[Cooking With Daniel From Nada Surf]</a></center>
 </body>
 </html>
