--- a/blackgoose/cooking.html
+++ b/blackgoose/cooking.html
@@ -3,6 +3,9 @@
 <meta charset="UTF-8">
 <title>Cooking with Daniel from Nada Surf</title>
 <style type="text/css">
+Body {
+	background-color: #C4DBD5;
+}
 H1 {
 	color: red;
 	border-bottom: 1px solid red;
