--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -2,7 +2,7 @@
 <br>
 <center>
 <div class="w3-bar w3-FF5F00 w3-#C4DBD5">
-<a href="blackgoose.html"class="w3-bar-item w3-button">Home</a> &nbsp;
+<a href="index.html"class="w3-bar-item w3-button">Home</a> &nbsp;
 <a href="jenskitchen.html"class="w3-bar-item w3-button">Recipes</a> &nbsp;
 <a href="bgnews.html"class="w3-bar-item w3-button">News</a> &nbsp;
 <a href="about.html"class="w3-bar-item w3-button">About</a> &nbsp;
