--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,7 @@
 
 <style>
 Body {
-	background-image: url(background.jpg);
+	background: #97BAB2;
 	font-family: 'Rajdhani', sans-serif;
 	font-size: 20;
 	margin-top: 40px;
