--- a/floralsbytaylormichelle/gallery.html
+++ b/floralsbytaylormichelle/gallery.html
@@ -14,7 +14,7 @@
 <head>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
-<title>Black Goose Bistro</title> 
+<title>Gallery</title> 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </center>
@@ -84,6 +84,7 @@ h2 {
 </center>
 
 <center>
+<div id="boxone">
 <h1>Our Gallery</h1>
 <img src="flower1.jpeg" alt="Flowers" width="350" height="350"></a>
 <img src="flower2.jpeg" alt="Flowers" width="350" height="350"></a>
